--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-
+/*animation*/
 .animated{
     -webkit-animation-duration: 1s;
     animation-duration: 1s;
@@ -34,4 +34,10 @@
 .fadeIn{
     -webkit-animation-name: fadeIn;
     animation-name: fadeIn;
+}
+
+/*svg animation*/
+svg path,
+svg rect{
+  fill: black;
 }
