--- a/src/app/pages/portafolio/portafolio.component.html
+++ b/src/app/pages/portafolio/portafolio.component.html
@@ -27,7 +27,8 @@
   </p>
 </div>
   <div *ngIf="!_productos.cargando" class="ae-masonry ae-masonry-md-2 ae-masonry-xl-4">
-    <a *ngFor="let producto of _productos.productos" routerLink= "/item" class="animated fadeIn rk-item ae-masonry__item">
+    <a *ngFor="let producto of _productos.productos" 
+    [routerLink]= "['/item',producto.cod]" class="animated fadeIn rk-item ae-masonry__item">
       <img src="assets/productos/{{producto.url}}.jpg" alt="">
         <div class="item-meta">
           <h2>{{producto.titulo}}</h2>
